All fixes for 154, tabzilla fix, overall spacing and ul tweaks

--- a/stylesheets/_tabzilla.scss
+++ b/stylesheets/_tabzilla.scss
@@ -76,6 +76,7 @@
 /* (I renamed all tabzilla to tabnav here...) */
 #tabnav-panel.tabnav-opened {
   height: 240px;
+  border-bottom: 1px solid #d5d5d5;
 }
 #tabnav-panel {
   -webkit-transition: all 0.2s ease-in-out;
